@@ -1,3 +1,9 @@
+globus-net-manager (0.13-1+gt6.@distro@) @distro@; urgency=low
+
+  * Remove unused code
+
+ -- Globus Toolkit <support@globus.org>  Thu, 29 Oct 2015 16:28:52 -0400
+
 globus-net-manager (0.12-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix linkage on Mac with libtool 2.4.6
